Angular $http használata jquery  getJSON helyett

--- a/WebMVCDevExpressApp/Views/Home/Grid.cshtml
+++ b/WebMVCDevExpressApp/Views/Home/Grid.cshtml
@@ -37,7 +37,7 @@
             columnChooser: { enabled: true },
             allowColumnReordering: true,
             sorting: { mode: 'multiple' },
-            groupPanel: { visible: true, emptyPanelText: 'Drag a column header here to group grid records' },
+            groupPanel: { visible: true, emptyPanelText: 'Ide dobd az oszlop fejlécét a csoportosításhoz.' },
             pager: { visible: true },
             paging: { pageSize: 20 },
             editing: {
